2002-01-28  Seth Nickell  <snickell@stanford.edu>

	* libnautilus-private/nautilus-global-preferences.c:
	(import_old_preferences_if_needed),
	(nautilus_global_preferences_init):

	Add a function for moving preference values (if they exist)
	from their old location to their new location, if it
	hasn't already been done.
	
	* libnautilus-private/nautilus-global-preferences.h:

	Change the location/name of THEME, SHOW_HIDDEN_FILES and
	SHOW_BACKUP_FILES so other file viewers in GNOME can smoothly
	access them.

2002-01-28  Anders Carlsson  <andersca@gnu.org>

	* components/throbber/main.c (main): Call gnome_program_init.

	* libnautilus/nautilus-view-standard-main.c 
	(nautilus_view_standard_main_multi): Call gnome_program_init.

	* libnautilus-private/nautilus-entry.c: Fix build.

	* libnautilus-private/nautilus-file.c: 
	* libnautilus-private/nautilus-file.h:
	Remove gmc link support and calls to gnome_set_metadata.
	
	* libnautilus-private/nautilus-file-operations.c 
	(create_transfer_dialog): Set transfer_info as user_data.

	* libnautilus-private/nautilus-file-operations-progress.c: Move stuff
	to finalize.

	* libnautilus-private/nautilus-entry.c: Remove cursor obscuring code
	since that exists in GtkEntry now.

2002-01-27  Darin Adler  <darin@bentspoon.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(draw_or_measure_label_text), (draw_stretch_handles): Formatting tweaks.
	* libnautilus-private/nautilus-icon-container.c: (icon_raise): Use new
	eel_gnome_canvas_item_send_behind.

2002-01-27  Alexander Larsson  <alla@lysator.liu.se>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Draw alpha-blended rounded rectangles around selected text even
	in non-aa mode.

	* libnautilus-private/nautilus-icon-container.c:
	Use the new EelCanvasRect item for selection rectangle in
	non-aa mode.
	Also make sure we never raise anything above the selection
	rectangle item. This means we can remove the