@@ -484,7 +484,7 @@ nautilus_property_browser_show (void)
 	if (main_browser == NULL) {
 		main_browser = nautilus_property_browser_new ();
 	} else {
-		eel_gtk_window_present (GTK_WINDOW (main_browser));
+		gtk_window_present (GTK_WINDOW (main_browser));
 	}
 }
 
